test : apply changes from service code